fix: Cors issue

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -13,5 +13,7 @@
     "Issuer": "Qatu",
     "Audience": "SD4 - Finnisimo"
   },
-  "AllowedHosts": "*"
+  "Cors": {
+    "AllowedOrigin": "http://localhost:5173"
+  }
 }
