--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=qatu;Uid=root;Pwd=root;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=qatu;Uid=root;Pwd=finnisimo4768;"
   },
   "Logging": {
     "LogLevel": {
