feat: add configurations photo

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -14,6 +14,6 @@
     "Audience": "SD4 - Finnisimo"
   },
   "Cors": {
-    "AllowedOrigin": "http://localhost:5173"
+    "AllowedOrigin": "https://localhost:5173"
   }
 }
