feat: add implementation email

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -15,5 +15,13 @@
   },
   "Cors": {
     "AllowedOrigin": "https://localhost:5173"
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "EnableSsl": true,
+    "UserName": "fionasupremo18@gmail.com",
+    "Password": "finndavid1",
+    "FromEmail": "fionasupremo18@gmail.com"
   }
 }
