feat: add email creating user

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -20,8 +20,8 @@
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": 587,
     "EnableSsl": true,
-    "UserName": "fionasupremo18@gmail.com",
-    "Password": "finndavid1",
-    "FromEmail": "fionasupremo18@gmail.com"
+    "UserName": "fionasupremo12@gmail.com",
+    "Password": "dreqtbewrqzczqwh",
+    "FromEmail": "fionasupremo12@gmail.com"
   }
 }
