--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=qatu;Uid=root;Pwd=finnisimo4768;"
+    "DefaultConnection": "Server=mysql8003.site4now.net;Database=db_aadc2c_qatufin;Uid=aadc2c_qatufin;Pwd=Finndavid4768;"
   },
   "Logging": {
     "LogLevel": {
