bugfix: Fix delete user endpoint

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql8003.site4now.net;Database=db_aadc2c_qatufin;Uid=aadc2c_qatufin;Pwd=Finndavid4768;"
+    "DefaultConnection": "Server=MYSQL8003.site4now.net;Database=db_aadc2c_qatufin;Uid=aadc2c_qatufin;Pwd=Finndavid4768;"
   },
   "Logging": {
     "LogLevel": {
